sources = files(
    'configs/Constants.vala',
    'controllers/ActionController.vala',
    'enums/DialogEnum.vala',
    'helpers/FormatsHelper.vala',
    'helpers/SqliteHelper.vala',
    'models/dao/ArchiveDAO.vala',
    'models/dao/ArchiveDAOImpl.vala',
    'models/db/ConnectionFactory.vala',
    'models/db/SQLiteSchemaHandler.vala',
    'models/objects/Archive.vala',
    'models/objects/ArchiveBuilder.vala',
    'services/Settings.vala',
    'utils/ArrayUtil.vala',
    'utils/CoreUtil.vala',
    'utils/StringUtil.vala',
    'utils/WidgetUtil.vala',
    'views/factory/DialogFactory.vala',
    'views/ApplicationView.vala',
    'widgets/ConversionListBox.vala',
    'widgets/ConversionListRow.vala',
    'widgets/DialogAbout.vala',
    'widgets/DialogInformations.vala',
    'widgets/DialogPreferences.vala',
    'widgets/HeaderBar.vala',
    'widgets/Welcome.vala',
    'Application.vala',
    'Main.vala',
)