sources = files(
	'Configs/Constants.vala',
	'Configs/Properties.vala',
	
	'Controllers/ConverterController.vala',

	'Enums/ColumnEnum.vala',
	'Enums/TypeItemEnum.vala',

	'Services/Settings.vala',

	'Utils/ArrayUtil.vala',
	'Utils/FileUtil.vala',
	'Utils/StringUtil.vala',
	'Utils/TimeUtil.vala',
	'Utils/WidgetUtil.vala',
	
	'Views/ConverterView.vala',

	'Objects/ItemConversion.vala',

	'Widgets/HeaderBar.vala',
	'Widgets/SourceListSidebar.vala',
	'Widgets/SourceList.vala',
	'Widgets/DialogPreferences.vala',
	'Widgets/DialogConvertFile.vala',
	'Widgets/ListConversion.vala',
	'Widgets/RowConversion.vala',

	'Application.vala',
	'Main.vala',
	'Window.vala'
)
