sources = files(
    'Application.vala',
    'Main.vala',
    'Window.vala',

    'Configs/Constants.vala',
    'Configs/Properties.vala',

    'Controllers/ConverterController.vala',

    'Enums/ColumnEnum.vala',
    'Enums/TypeItemEnum.vala',

    'Objects/ItemConversion.vala',

    'Services/Settings.vala',

    'Utils/ArrayUtil.vala',
    'Utils/FileUtil.vala',
    'Utils/Logger.vala',
    'Utils/StringUtil.vala',
    'Utils/TimeUtil.vala',
    'Utils/WidgetUtil.vala',

    'Views/ConverterView.vala',

    'Widgets/DialogConvertFile.vala',
    'Widgets/DialogPreferences.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/ListConversion.vala',
    'Widgets/RowConversion.vala',
    'Widgets/SourceItem.vala',
    'Widgets/SourceList.vala',
    'Widgets/SourceListSidebar.vala'
)
